# football-players-etl

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
airflow/backup/: app_db.sql
airflow/dags/: football_players_etl.py
airflow/dags/utils/: utils.py
